update_attempter_android.cc
@@ -398,7 +398,8 @@ void UpdateAttempterAndroid::BuildUpdateActions() {
       boot_control_,
       hardware_,
       nullptr,                                        // system_state, not used.
-      new MultiRangeHttpFetcher(download_fetcher)));  // passes ownership
+      new MultiRangeHttpFetcher(download_fetcher),    // passes ownership
+      true));                                         // is_interactive
   shared_ptr<FilesystemVerifierAction> filesystem_verifier_action(
       new FilesystemVerifierAction());
 
